--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "providus_org",
-  "main": "src/index.ts",
+  "main": "src/app.ts",
   "type": "module",
   "scripts": {
     "build": "tsdown",
     "check-types": "tsc -b",
-    "dev": "tsx watch src/index.ts",
-    "dev:b": "bun --hot src/index.ts",
-    "start": "node dist/index.js",
-    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
+    "dev": "tsx watch src/app.ts",
+    "dev:b": "bun --hot src/app.ts",
+    "start": "node dist/app.js",
+    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/app.ts --outfile server",
     "prepare": "husky",
     "check": "oxlint",
     "ruler:apply": "pnpm dlx @intellectronica/ruler@latest apply --local-only"
@@ -16,10 +16,13 @@
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@scalar/express-api-reference": "^0.8.22",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
