--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "bcryptjs": "^3.0.2",
+    "chalk": "^5.6.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
@@ -44,5 +46,5 @@
   "lint-staged": {
     "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue,astro,svelte}": "oxlint"
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "bun@1.0.0"
 }
