--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ API_BASE_URL=http://localhost:4000
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
+
+
+# JWT Configuration
+ACCESS_SECRET=access-secret
+REFRESH_SECRET=refresh-secret
