--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,13 @@ API_BASE_URL=http://localhost:4000
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
 
-
 # JWT Configuration
-ACCESS_SECRET=access-secret
-REFRESH_SECRET=refresh-secret
+ACCESS_SECRET=your-access-secret-key-change-in-production
+REFRESH_SECRET=your-refresh-secret-key-change-in-production
+
+# Email Configuration (Gmail SMTP)
+# Note: Gmail has sending limits (about 500 emails/day)
+# For Gmail: Enable 2FA and create an App Password
+# Guide: https://support.google.com/accounts/answer/185833
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-16-character-app-password
