--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@scalar/express-api-reference": "^0.8.22",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/nodemailer": "^7.0.2",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.6.2",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.9",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.11"
   },
