--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.11"
@@ -38,6 +39,7 @@
     "@biomejs/biome": "2.2.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.13.11",
     "@types/swagger-ui-express": "^4.1.8",
     "husky": "^9.1.7",
