--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "swagger-ui-express": "^5.0.1",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
