refactor: file naming convention and image upload route handler

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
+    "openapi3-ts": "^4.5.0",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
