feat(job-request): Enhance OpenAPI documentation for job request module
- Completely refactored job request OpenAPI specification
- Added comprehensive schemas for job request operations
- Implemented detailed path registrations for key endpoints:
* Apply for job
* Get my applications
* Get job applications
* Accept application
- Improved error response handling and documentation
- Updated path references to use shared constants
- Removed unused imports and simplified schema registration
- Added security and authorization details to endpoint definitions
Improves API documentation and provides clear contract for job request interactions across the application.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "check": "oxlint",
     "ruler:apply": "pnpm dlx @intellectronica/ruler@latest apply --local-only",
     "generate:module": "node script/generate-module.js",
-    "format": "biome format --write ./src"
+    "format": "biome format --write ./src",
+    "lint": "bunx biome lint --write ./src"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
