--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ REFRESH_SECRET=your-refresh-secret-key-change-in-production
 # Guide: https://support.google.com/accounts/answer/185833
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-16-character-app-password
+
+# Firebase Configuration
+# Place your firebase-service-account.json file in the project root
+# Download from: Firebase Console > Project Settings > Service Accounts > Generate New Private Key
