--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/nodemailer": "^7.0.2",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.6.2",
+    "consola": "^3.4.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
