updated docker config

--- a/.env.docker
+++ b/.env.docker
@@ -1,44 +1,25 @@
 # Docker Environment Configuration
-# Copy this file to .env for local Docker development
+# Copy this to .env and update with your values
 
-# ================================
-# MongoDB Configuration
-# ================================
+# MongoDB
 MONGO_ROOT_USER=admin
 MONGO_ROOT_PASSWORD=changeme_in_production
 MONGO_DB_NAME=jobsphere
 MONGO_PORT=27017
 
-# ================================
-# Application Configuration
-# ================================
+# Application
 PORT=4000
 API_BASE_URL=http://localhost:4000
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=*
 
-# ================================
-# JWT Configuration
-# ================================
-# IMPORTANT: Change these in production!
-ACCESS_SECRET=your-super-secret-access-key-change-in-production-min-32-chars
-REFRESH_SECRET=your-super-secret-refresh-key-change-in-production-min-32-chars
+# JWT Secrets (IMPORTANT: Change in production!)
+ACCESS_SECRET=your-super-secret-access-key-min-32-characters-long
+REFRESH_SECRET=your-super-secret-refresh-key-min-32-characters-long
 
-# ================================
-# Email Configuration (Gmail SMTP)
-# ================================
-# For Gmail: Enable 2FA and create an App Password
-# Guide: https://support.google.com/accounts/answer/185833
+# Email (Gmail SMTP)
+# Enable 2FA and create App Password: https://support.google.com/accounts/answer/185833
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-16-character-app-password
 
-# ================================
-# Redis Configuration (Optional)
-# ================================
-REDIS_PORT=6379
-REDIS_URL=redis://redis:6379
-
-# ================================
-# Firebase Configuration
-# ================================
-# Place your firebase-service-account.json file in the project root
-# Download from: Firebase Console > Project Settings > Service Accounts
+# Firebase (Optional - for push notifications)
+# Place firebase-service-account.json in project root
