fix: docker database issues

--- a/.env.docker
+++ b/.env.docker
@@ -1,11 +1,10 @@
 # Docker Environment Configuration
 # Copy this to .env and update with your values
 
-# MongoDB
-MONGO_ROOT_USER=admin
-MONGO_ROOT_PASSWORD=changeme_in_production
-MONGO_DB_NAME=jobsphere
-MONGO_PORT=27017
+# MongoDB Atlas (Cloud Database)
+# Get your connection string from MongoDB Atlas dashboard
+# Format: mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://username:password@cluster.mongodb.net/jobsphere?retryWrites=true&w=majority
 
 # Application
 PORT=4000
