--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,6 @@
 version: '3.8'
 
 services:
-  mongodb:
-    image: mongo:7.0
-    container_name: jobsphere-mongodb
-    restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USER:-admin}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD:-changeme}
-      MONGO_INITDB_DATABASE: ${MONGO_DB_NAME:-jobsphere}
-    ports:
-      - "${MONGO_PORT:-27017}:27017"
-    volumes:
-      - mongodb_data:/data/db
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    networks:
-      - jobsphere-network
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   app:
     build:
       context: .
@@ -33,7 +12,7 @@ services:
       - "${PORT:-4000}:4000"
     environment:
       NODE_ENV: production
-      DATABASE_URL: mongodb://${MONGO_ROOT_USER:-admin}:${MONGO_ROOT_PASSWORD:-changeme}@mongodb:27017/${MONGO_DB_NAME:-jobsphere}?authSource=admin
+      DATABASE_URL: ${DATABASE_URL}
       PORT: 4000
       API_BASE_URL: ${API_BASE_URL}
       CORS_ORIGIN: ${CORS_ORIGIN}
@@ -45,16 +24,3 @@ services:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
       - ./firebase-service-account.json:/app/firebase-service-account.json:ro
-    depends_on:
-      mongodb:
-        condition: service_healthy
-    networks:
-      - jobsphere-network
-
-networks:
-  jobsphere-network:
-    driver: bridge
-
-volumes:
-  mongodb_data:
-    driver: local
