chore: added grafana and loki for monitoring

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ SMTP_PASS=your-16-character-app-password
 # Firebase Configuration
 # Place your firebase-service-account.json file in the project root
 # Download from: Firebase Console > Project Settings > Service Accounts > Generate New Private Key
+
+ENABLE_MONITORING=true
+GRAFANA_PORT=3000
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
