--- a/.env.docker
+++ b/.env.docker
@@ -22,3 +22,11 @@ SMTP_PASS=your-16-character-app-password
 
 # Firebase (Optional - for push notifications)
 # Place firebase-service-account.json in project root
+
+# Monitoring (Optional - Grafana & Loki)
+# Set to 'true' to enable monitoring stack
+ENABLE_MONITORING=false
+GRAFANA_PORT=3000
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
+GRAFANA_ROOT_URL=http://localhost:3000
