refactor: notification module and updated docs

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ REFRESH_SECRET=your-refresh-secret-key-change-in-production
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-16-character-app-password
 
-# Firebase Configuration
+# Firebase Configuration (Push Notifications)
 # Place your firebase-service-account.json file in the project root
 # Download from: Firebase Console > Project Settings > Service Accounts > Generate New Private Key
+# The service account JSON file contains all necessary credentials
+# No additional environment variables needed for Firebase
