--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "docker:start": "docker-compose up -d",
     "docker:stop": "docker-compose down",
     "docker:restart": "docker-compose restart",
+    "docker:rebuild": "docker-compose down && docker-compose up -d --build",
     "docker:logs": "docker-compose logs -f app",
     "docker:build": "docker-compose up -d --build",
     "docker:clean": "docker-compose down -v",
