--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "${PORT:-4000}:4000"
     environment:
       NODE_ENV: production
+      TZ: Asia/Dhaka
       DATABASE_URL: ${DATABASE_URL}
       PORT: 4000
       API_BASE_URL: ${API_BASE_URL}
