--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chalk": "^5.6.2",
     "consola": "^3.4.2",
     "cors": "^2.8.5",
+    "decimal.js": "^10.6.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-serve-static-core": "^0.1.1",
@@ -47,6 +48,7 @@
     "nodemailer": "^7.0.10",
     "openapi3-ts": "^4.5.0",
     "socket.io": "^4.8.1",
+    "stripe": "^19.3.1",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
