--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ DATABASE_URL='mongodb+srv://yeasin2002:thasporesai-backend@thasporesai-backend.q
 # Server Configuration
 PORT=4000
 API_BASE_URL=http://localhost:4000
+NODE_ENV=development
+
+# Logging Configuration
+LOG_LEVEL=debug
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
