--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "openapi3-ts": "^4.5.0",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.2",
     "socket.io": "^4.8.1",
     "stripe": "^19.3.1",
     "swagger-ui-express": "^5.0.1",
