--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/app.ts --outfile server",
     "prepare": "husky",
     "check": "oxlint",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint . --fix",
     "ruler:apply": "pnpm dlx @intellectronica/ruler@latest apply --local-only",
     "generate:module": "node script/generate-module.js",
-    "format": "biome format --write ./src",
-    "lint": "biome lint ./src",
+    "format": "prettier --write \"src/**/*.{ts,js,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json}\"",
+    "lint": "eslint . && prettier --check \"src/**/*.{ts,js,json}\"",
+    "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,js,json}\"",
     "lint-staged": "lint-staged",
     "docker:setup": "cp .env.docker .env && mkdir -p uploads logs && echo '✓ Docker setup complete. Edit .env with your configuration.'",
     "docker:start": "docker-compose up -d",
@@ -58,17 +62,25 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.6",
+    "@eslint/js": "^9.39.1",
     "@types/cors": "^2.8.19",
+    "@types/eslint__js": "^9.14.0",
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.18.12",
     "@types/swagger-ui-express": "^4.1.8",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "oxlint": "^1.24.0",
+    "prettier": "^3.7.1",
     "tsdown": "^0.15.9",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.0"
   },
   "author": "JobSphere",
   "license": "Proprietary",
@@ -81,7 +93,11 @@
   },
   "homepage": "https://github.com/yeasin2002/thasporesai-backend-jvai#readme",
   "lint-staged": {
-    "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue,astro,svelte}": "oxlint"
+    "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue,astro,svelte}": [
+      "prettier --write",
+      "eslint --fix",
+      "oxlint"
+    ]
   },
   "packageManager": "pnpm@10.18.3"
 }
