--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,14 +28,17 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run linter
+      - name: Run linter (oxlint)
         run: pnpm run check
+
+      - name: Run ESLint
+        run: pnpm run eslint
 
       - name: Check types
         run: pnpm run check-types
 
-      - name: Format check
-        run: pnpm run format
+      - name: Format check (Prettier)
+        run: pnpm run format:check
 
       - name: Build project
         run: pnpm run build
