--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,7 @@
 {
   "**/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue,astro,svelte}": [
-    "oxlint",
-    "npm run format"
+    "prettier --write",
+    "eslint --fix",
+    "oxlint"
   ]
 }
