feat(stripe): add Stripe SDK integration and environment configuration
- Add Stripe environment variables to .env.example (STRIPE_SECRET_KEY, STRIPE_PUBLISHABLE_KEY, STRIPE_WEBHOOK_SECRET)
- Export Stripe configuration variables in src/lib/Env.ts with proper TypeScript typing
- Create new src/lib/stripe.ts module to initialize Stripe client with secret key
- Implement error handling for missing STRIPE_SECRET_KEY with descriptive error message
- Enable TypeScript support and set API version to latest (2025-10-29.clover)
- Export Stripe instance and publishable key for use across the application
- Add development-only logging for Stripe initialization status
- Update Stripe integration task list to mark completed setup tasks as done
- Remove creator metadata from documentation file

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,9 @@ OFFER_EXPIRY_DAYS=7
 
 # Admin User ID (create admin user first, then add ID here)
 ADMIN_USER_ID=
+
+
+
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KE=
+STRIPE_WEBHOOK_SECRET=
