--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "decimal.js": "^10.6.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "express-serve-static-core": "^0.1.1",
     "firebase-admin": "^13.5.0",
     "jsonwebtoken": "^9.0.2",
