--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "lint": "eslint . && prettier --check \"src/**/*.{ts,js,json}\"",
     "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,js,json}\"",
     "lint-staged": "lint-staged",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run tests/wallet tests/webhooks",
+    "test:integration": "vitest run tests/integration",
     "docker:setup": "cp .env.docker .env && mkdir -p uploads logs && echo '✓ Docker setup complete. Edit .env with your configuration.'",
     "docker:start": "docker-compose up -d",
     "docker:stop": "docker-compose down",
@@ -56,7 +61,9 @@
     "openapi3-ts": "^4.5.0",
     "socket.io": "^4.8.1",
     "stripe": "^19.3.1",
+    "supertest": "^7.2.2",
     "swagger-ui-express": "^5.0.1",
+    "vitest": "^4.0.18",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.12"
@@ -69,6 +76,7 @@
     "@types/express": "^5.0.3",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.18.12",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
