--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "#": ["./*"]
+      "#/*": ["./*"]
     },
     "outDir": "./dist",
     "types": ["node"],
@@ -19,5 +19,5 @@
   // any can be use in this codebase
   "noImplicitAny": false,
 
-  "include": ["globals.d.ts", "src", "*/**/.test.ts"]
+  "include": ["globals.d.ts", "src/**/*", "tests/**/*"]
 }
