fix: all eslint issues

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/app.ts --outfile server",
     "prepare": "husky",
     "check": "oxlint",
-    "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix",
+    "eslint": "eslint ./src",
+    "eslint:fix": "eslint ./src --fix",
     "ruler:apply": "pnpm dlx @intellectronica/ruler@latest apply --local-only",
     "generate:module": "node script/generate-module.js",
     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
@@ -20,9 +20,6 @@
     "lint": "eslint . && prettier --check \"src/**/*.{ts,js,json}\"",
     "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,js,json}\"",
     "lint-staged": "lint-staged",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
     "test:unit": "vitest run tests/wallet tests/webhooks",
     "test:integration": "vitest run tests/integration",
     "docker:setup": "cp .env.docker .env && mkdir -p uploads logs && echo '✓ Docker setup complete. Edit .env with your configuration.'",
