refactor: app and server for better readability

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "job-sphere",
-  "main": "src/app.ts",
+  "main": "src/server.ts",
   "type": "module",
   "scripts": {
     "build": "tsdown",
     "check-types": "tsc -b",
-    "dev": "tsx watch src/app.ts",
-    "dev:b": "bun --hot src/app.ts",
-    "start": "node dist/app.js",
-    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/app.ts --outfile server",
+    "dev": "tsx watch src/server.ts",
+    "dev:b": "bun --hot src/server.ts",
+    "start": "node dist/server.js",
+    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/server.ts --outfile server",
     "prepare": "husky",
     "check": "oxlint",
     "eslint": "eslint ./src",
