feat(stripe-payment-integration): completed task 12 of Phase 6
- Add Agenda job scheduling library with MongoDB backend support
- Create src/lib/agenda.ts for cron job initialization and configuration
- Implement hourly offer expiration job in src/jobs/expire-offers.ts
- Query expired accepted offers and process refunds via MongoDB transactions
- Update offer status to "expired" and send customer notifications
- Integrate Agenda scheduler into main app.ts initialization
- Add @agendajs/mongo-backend and agenda dependencies to package.json
- Update tasks.md to mark task 12 as complete with Agenda implementation note

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "docker:test": "curl -s http://localhost:4000/ && echo '\n✓ API is responding' || echo '\n✗ API is not responding'"
   },
   "dependencies": {
+    "@agendajs/mongo-backend": "^1.0.0",
     "@asteasolutions/zod-to-openapi": "^8.1.0",
     "@scalar/express-api-reference": "^0.8.22",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.2",
+    "agenda": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.6.2",
     "consola": "^3.4.2",
