--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node dist/app.js",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/app.ts --outfile server",
     "prepare": "husky",
-    "check": "oxlint",
+    "check": "oxlint --fix",
     "eslint": "eslint .",
     "eslint:fix": "eslint . --fix",
     "ruler:apply": "pnpm dlx @intellectronica/ruler@latest apply --local-only",
