chore: added Beszel Monitoring

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,12 @@ GRAFANA_ADMIN_USER=admin
 GRAFANA_ADMIN_PASSWORD=admin
 GRAFANA_ROOT_URL=http://localhost:8000
 
+# Beszel Monitoring Configuration
+# Lightweight server and container monitoring system
+BESZEL_HUB_PORT=8090                    # Dashboard port (default: 8090)
+BESZEL_AGENT_KEY=                       # Generated during Hub setup - leave empty initially
+BESZEL_INTERVAL=1                       # Metric collection interval in seconds (default: 1)
+
 
 
 
