--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,50 @@ services:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
       - ./firebase-service-account.json:/app/firebase-service-account.json:ro
+    networks:
+      - beszel-network
+
+  # Beszel Monitoring Hub - Web Dashboard
+  beszel-hub:
+    image: henrygd/beszel:latest
+    container_name: beszel-hub
+    restart: unless-stopped
+    ports:
+      - "${BESZEL_HUB_PORT:-8090}:8090"
+    volumes:
+      - beszel_data:/beszel_data
+    networks:
+      - beszel-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8090/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # Beszel Monitoring Agent - Metrics Collector
+  beszel-agent:
+    image: henrygd/beszel-agent:latest
+    container_name: beszel-agent
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - beszel-network
+    environment:
+      - HUB_URL=http://beszel-hub:8090
+      - KEY=${BESZEL_AGENT_KEY}
+      - INTERVAL=${BESZEL_INTERVAL:-1}
+    depends_on:
+      beszel-hub:
+        condition: service_healthy
+
+networks:
+  beszel-network:
+    driver: bridge
+    name: beszel-network
+
+volumes:
+  beszel_data:
+    driver: local
+    name: beszel_data
