feat(image-upload): integrate ImageKit for cloud image storage
- Add ImageKit SDK dependency (v6.0.0) to package.json
- Create imagekit.ts module with ImageKit client initialization
- Add ImageKit configuration variables to .env.example
- Update img-upload service to use ImageKit for image uploads
- Add ImageKit API key validation in upload validation schema
- Update OpenAPI documentation for image upload endpoint
- Integrate ImageKit with multer middleware for seamless file handling
- Enable cloud-based image storage with automatic optimization

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ REFRESH_SECRET=refresh-secret
 SMTP_USER=mdkawsarislam2002@gmail.com
 SMTP_PASS="gedoekodikohbfhp"
 
+# ImageKit Configuration
+# Get these from: https://imagekit.io/dashboard/developer/api-keys
+IMAGEKIT_PUBLIC_KEY=your_public_key_here
+IMAGEKIT_PRIVATE_KEY=your_private_key_here
+IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/your_imagekit_id
 
 # Firebase Configuration
 # Place your firebase-service-account.json file in the project root
