--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^5.1.0",
     "express-serve-static-core": "^0.1.1",
     "firebase-admin": "^13.5.0",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
