--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,53 @@ services:
     ports:
       - "${PORT:-4000}:4000"
     environment:
+      # Core
       NODE_ENV: production
       TZ: Asia/Dhaka
-      DATABASE_URL: ${DATABASE_URL}
       PORT: 4000
+      
+      # Database
+      DATABASE_URL: ${DATABASE_URL}
+      
+      # API & CORS
       API_BASE_URL: ${API_BASE_URL}
       CORS_ORIGIN: ${CORS_ORIGIN}
+      
+      # JWT
       ACCESS_SECRET: ${ACCESS_SECRET}
       REFRESH_SECRET: ${REFRESH_SECRET}
+      
+      # Email
+      SMTP_HOST: ${SMTP_HOST:-smtp.gmail.com}
+      SMTP_PORT: ${SMTP_PORT:-587}
       SMTP_USER: ${SMTP_USER}
       SMTP_PASS: ${SMTP_PASS}
+      
+      # Firebase
+      FIREBASE_KEY_PAIR: ${FIREBASE_KEY_PAIR}
+      
+      # Stripe (optional)
+      STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+      STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}
+      STRIPE_WEBHOOK_SECRET: ${STRIPE_WEBHOOK_SECRET}
+      
+      # Payment Config
+      PLATFORM_FEE_PERCENT: ${PLATFORM_FEE_PERCENT:-5}
+      SERVICE_FEE_PERCENT: ${SERVICE_FEE_PERCENT:-20}
+      PAYMENT_CURRENCY: ${PAYMENT_CURRENCY:-USD}
+      MIN_JOB_BUDGET: ${MIN_JOB_BUDGET:-10}
+      MAX_JOB_BUDGET: ${MAX_JOB_BUDGET:-10000}
+      OFFER_EXPIRY_DAYS: ${OFFER_EXPIRY_DAYS:-7}
+      
+      # Admin
+      ADMIN_USER_ID: ${ADMIN_USER_ID}
     volumes:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
       - ./firebase-service-account.json:/app/firebase-service-account.json:ro
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:4000/', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      interval: 30s
+      timeout: 10s
+      start_period: 40s
+      retries: 3
