--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "lint": "eslint . && prettier --check \"src/**/*.{ts,js,json}\"",
     "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,js,json}\"",
     "docker:setup": "cp .env.docker .env && mkdir -p uploads logs && echo '✓ Docker setup complete. Edit .env with your configuration.'",
-    "docker:start": "docker-compose up -d",
-    "docker:stop": "docker-compose down",
-    "docker:restart": "docker-compose restart",
-    "docker:rebuild": "docker-compose down && docker-compose up -d --build",
-    "docker:logs": "docker-compose logs -f jobsphere-app",
-    "docker:build": "docker-compose up -d --build",
-    "docker:clean": "docker-compose down -v",
-    "docker:ps": "docker-compose ps",
+    "docker:start": "docker compose up -d",
+    "docker:stop": "docker compose down",
+    "docker:restart": "docker compose restart",
+    "docker:rebuild": "docker compose down && docker compose up -d --build",
+    "docker:logs": "docker compose logs -f jobsphere-app",
+    "docker:build": "docker compose up -d --build",
+    "docker:clean": "docker compose down -v",
+    "docker:ps": "docker compose ps",
     "docker:test": "curl -s http://localhost:4000/ && echo '\n✓ API is responding' || echo '\n✗ API is not responding'"
   },
   "dependencies": {
