--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "start": "node dist/app.js",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/app.ts --outfile server",
     "prepare": "lefthook install",
-    "check": "oxlint",
-    "eslint": "eslint .",
-    "eslint:fix": "eslint . --fix",
+    "eslint": "eslint ./src",
+    "eslint:fix": "eslint ./src --fix",
     "ruler:apply": "pnpm dlx @intellectronica/ruler@latest apply --local-only",
     "generate:module": "node script/generate-module.js",
     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json}\"",
     "lint": "eslint . && prettier --check \"src/**/*.{ts,js,json}\"",
     "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,js,json}\"",
-    "docker:setup": "cp .env.docker .env && mkdir -p uploads logs && echo '✓ Docker setup complete. Edit .env with your configuration.'",
     "docker:start": "docker compose up -d",
     "docker:stop": "docker compose down",
     "docker:restart": "docker compose restart",
@@ -63,7 +61,6 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.6",
     "@eslint/js": "^9.39.1",
     "@types/cors": "^2.8.19",
     "@types/eslint__js": "^9.14.0",
@@ -76,7 +73,6 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
     "lefthook": "^2.1.1",
-    "oxlint": "^1.24.0",
     "prettier": "^3.7.1",
     "tsdown": "^0.15.9",
     "tsx": "^4.20.6",
