docs(beszel): add server monitoring setup and quick start guides
- Add BESZEL-QUICK-START.md with 5-minute setup instructions and common commands
- Add BESZEL-SETUP.md with comprehensive monitoring guide including architecture, configuration, and Nginx reverse proxy setup
- Update .env.example with Beszel environment variables (port, URLs, token, key)
- Update .gitignore to exclude Beszel data directories (beszel_data, beszel_agent_data, beszel_socket)
- Update docker-compose.yml to include Beszel Hub and Agent services with proper configuration
- Update DEPLOYMENT.md with Beszel deployment instructions and monitoring setup details
- Provides clear documentation for users to set up server monitoring dashboard with real-time metrics

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,13 @@ ADMIN_USER_ID
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISHABLE_KE=
 STRIPE_WEBHOOK_SECRET=
+
+
+# Beszel Monitoring (optional - for server monitoring dashboard)
+# Access dashboard at: http://localhost:8090 (local) or http://your-vps-ip:8090 (production)
+# Leave TOKEN and KEY empty initially, they will be generated in the Beszel UI
+BESZEL_PORT=8090
+BESZEL_APP_URL=http://localhost:8090
+BESZEL_HUB_URL=http://localhost:8090
+BESZEL_TOKEN=
+BESZEL_KEY=
