--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,3 +66,31 @@ services:
       timeout: 10s
       start_period: 40s
       retries: 3
+  # Beszel Hub - Server Monitoring Dashboard
+  beszel:
+    image: henrygd/beszel
+    container_name: beszel
+    restart: unless-stopped
+    environment:
+      - APP_URL=${BESZEL_APP_URL:-http://localhost:8090}
+    ports:
+      - "${BESZEL_PORT:-8090}:8090"
+    volumes:
+      - ./beszel_data:/beszel_data
+      - ./beszel_socket:/beszel_socket
+
+  # Beszel Agent - Collects system metrics
+  beszel-agent:
+    image: henrygd/beszel-agent
+    container_name: beszel-agent
+    restart: unless-stopped
+    network_mode: host
+    volumes:
+      - ./beszel_agent_data:/var/lib/beszel-agent
+      - ./beszel_socket:/beszel_socket
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      LISTEN: /beszel_socket/beszel.sock
+      HUB_URL: ${BESZEL_HUB_URL:-http://localhost:8090}
+      TOKEN: ${BESZEL_TOKEN:-}
+      KEY: ${BESZEL_KEY:-}
