--- a/package.json
+++ b/package.json
@@ -17,16 +17,7 @@
     "format": "prettier --write \"src/**/*.{ts,js,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,js,json}\"",
     "lint": "eslint . && prettier --check \"src/**/*.{ts,js,json}\"",
-    "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,js,json}\"",
-    "docker:start": "docker compose up -d",
-    "docker:stop": "docker compose down",
-    "docker:restart": "docker compose restart",
-    "docker:rebuild": "docker compose down && docker compose up -d --build",
-    "docker:logs": "docker compose logs -f jobsphere-app",
-    "docker:build": "docker compose up -d --build",
-    "docker:clean": "docker compose down -v",
-    "docker:ps": "docker compose ps",
-    "docker:test": "curl -s http://localhost:4000/ && echo '\n✓ API is responding' || echo '\n✗ API is not responding'"
+    "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,js,json}\""
   },
   "dependencies": {
     "@agendajs/mongo-backend": "^1.0.0",
@@ -62,6 +53,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@go-task/cli": "^3.48.0",
     "@types/cors": "^2.8.19",
     "@types/eslint__js": "^9.14.0",
     "@types/express": "^5.0.3",
