--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,20 +25,21 @@ jobs:
           node-version: "20"
           cache: "pnpm"
 
+      - name: Install Task
+        uses: go-task/setup-task@v1
+        with:
+          version: latest
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run linter (oxlint)
-        run: pnpm run check
+      - name: Run CI checks
+        run: task ci
 
-      - name: Run ESLint
-        run: pnpm run eslint
-
-      - name: Check types
-        run: pnpm run check-types
-
-      - name: Format check (Prettier)
-        run: pnpm run format:check
-
-      - name: Build project
-        run: pnpm run build
+      - name: Build summary
+        if: success()
+        run: |
+          echo "✅ Build successful!"
+          echo "- Linting: Passed"
+          echo "- Type checking: Passed"
+          echo "- Build: Passed"
