--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,14 +25,17 @@ jobs:
           node-version: "20"
           cache: "pnpm"
 
-      - name: Install Task
-        uses: go-task/setup-task@v1.0.0
-
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Run CI checks
-        run: task ci
+      - name: check linting
+        run: pnpm run lint
+
+      - name: check types
+        run: pnpm run check-types
+
+      - name: Build project
+        run: pnpm run build
 
       - name: Build summary
         if: success()
